--- a/src/app/components/all-quotation/add-quotation/add-quotation.component.html
+++ b/src/app/components/all-quotation/add-quotation/add-quotation.component.html
@@ -159,6 +159,7 @@
                       type="number" 
                       formControlName="discountPercentage" 
                       class="form-control"
+                      readonly="true"
                       [class.is-invalid]="isItemFieldInvalid(i, 'discountPercentage')"
                       min="0"
                       max="100"
