Update SearchableSelectComponent styles: Change selected background color to a translucent variant for improved visibility

--- a/src/app/shared/components/searchable-select/searchable-select.component.scss
+++ b/src/app/shared/components/searchable-select/searchable-select.component.scss
@@ -92,7 +92,7 @@
         }
         
         &.selected {
-          background-color: var(--primary);
+          background-color: rgba(var(--primary-rgb), 0.3);
           color: var(--primary);
 
           .checkbox {
