--- a/src/app/components/purchase/purchase.component.html
+++ b/src/app/components/purchase/purchase.component.html
@@ -12,6 +12,12 @@
             class="form-control" 
             placeholder="Search by invoice number..."
           >
+          <input 
+            type="text" 
+            formControlName="coalNumber" 
+            class="form-control" 
+            placeholder="Search by coal number..."
+          >
         </div>
         <div class="form-group">
           <div class="product-select-group">
