--- a/src/app/shared/components/searchable-select/searchable-select.component.html
+++ b/src/app/shared/components/searchable-select/searchable-select.component.html
@@ -3,7 +3,7 @@
     <input 
       type="text" 
       class="search-input" 
-      [placeholder]="placeholder"
+      [placeholder]="getDisplayText()"
       [(ngModel)]="searchText"
       (input)="onSearch($event)"
       (focus)="onFocus()"
