Added total pay and hours calculate and display.

--- a/src/app/components/attendance/attendance-detail/attendance-detail.component.html
+++ b/src/app/components/attendance/attendance-detail/attendance-detail.component.html
@@ -143,6 +143,20 @@
               <td colspan="6" class="text-center">No attendance records found</td>
             </tr>
           </tbody>
+          <tfoot>
+            <tr>
+              <td><b>Total</b></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>{{totalRegularHours}}</td>
+              <td>{{totalRegularPay}}</td>
+              <td>{{totalOvertimeHours}}</td>
+              <td>{{totalOvertimePay}}</td>
+              <td>{{totalOfTotalPay}}</td>
+              <td></td>
+            </tr>
+          </tfoot>
         </table>
       </div>
     </div>
