--- a/src/app/components/purchase/purchase.component.html
+++ b/src/app/components/purchase/purchase.component.html
@@ -14,9 +14,9 @@
           >
           <input 
             type="text" 
-            formControlName="coalNumber" 
+            formControlName="coilNumber" 
             class="form-control" 
-            placeholder="Search by coal number..."
+            placeholder="Search by coil number..."
           >
         </div>
         <div class="form-group">
