--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -69,7 +69,7 @@
     .actions {
       display: flex;
       gap: 0.5rem;
-
+      padding: 16px;
       .btn-icon {
         background: none;
         border: none;
