--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -206,6 +206,32 @@
         >
       </div>
 
+      <div class="form-group">
+        <label for="weight">
+          <i class="fa-solid fa-weight-scale"></i> Weight <span class="required">*</span>
+        </label>
+        <input 
+          type="number" 
+          id="weight" 
+          formControlName="weight" 
+          class="form-control"
+        >
+      </div>
+
+      <div class="form-group">
+        <label for="type">
+          <i class="fa-solid fa-list"></i> Product Type
+        </label>
+        <select 
+          id="type" 
+          formControlName="type" 
+          class="form-control"
+        >
+          <option value="NOS">NOS</option>
+          <option value="MM">MM</option>
+        </select>
+      </div>
+
       <div class="form-group full-width">
         <label for="description">
           <i class="fas fa-align-left"></i> Description
