Updated quotation table functionality and added download pdf feature.

--- a/src/app/components/all-quotation/add-quotation/add-quotation.component.scss
+++ b/src/app/components/all-quotation/add-quotation/add-quotation.component.scss
@@ -167,6 +167,8 @@
   /* Light blue background */
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-height: 500px;
+  overflow-y: auto;
 }
 
 /* Table styles */
@@ -238,6 +240,11 @@
   color: white;
   margin-top: 10px;
 }
+.btn-danger {
+  background-color: red;
+  color: white;
+  margin-top: 10px;
+}
 
 .btn-submit {
   background-color: #0099cc;
@@ -246,6 +253,11 @@
 
 .btn-delete {
   background-color: #ff6347;
+  color: white;
+}
+
+.btn-success {
+  background-color: green;
   color: white;
 }
 
