--- a/src/app/components/all-quotation/add-quotation/add-quotation.component.html
+++ b/src/app/components/all-quotation/add-quotation/add-quotation.component.html
@@ -102,7 +102,7 @@
               [formGroupName]="i">
               <div class="form-group">
                 <label>
-                  <i class="fa-solid fa-location-dot"></i> Select Product
+                  <i class="fas fa-boxes"></i> Select Product
                 </label>
                 <select id="type" formControlName="selectedProduct" class="form-control"
                   (change)="onProductSelected(i, $event)">
@@ -110,8 +110,8 @@
                 </select>
               </div>
               <div class="product-delete-btn">
-                <button type="button" (click)="removeProduct(i)" class="btn btn-delete"><i
-                    class="fa-solid fa-trash"></i></button>
+                <button type="button" (click)="editSelectedProductTable(i)" class="btn btn-success"><i class="fa-solid fa-pen"></i> Edit Table</button>&nbsp;&nbsp;
+                <button type="button" (click)="removeProduct(i)" class="btn btn-delete"><i class="fa-solid fa-trash"></i></button>
               </div>
             </div>
           </div>
@@ -206,7 +206,7 @@
       <!-- Additional Details -->
       <div class="additional-details">
         <div class="form-row">
-          <div class="form-group">
+          <div class="form-group" style="margin-top: 10px;">
             <label>
               <i class="fas fa-comment"></i> Remarks
             </label>
@@ -259,12 +259,13 @@
     </button>
   </div>
   <div class="table-container">
-    <form [formGroup]="quotationForm" (ngSubmit)="onSaveTable()">
+    <form [formGroup]="quotationForm">
       <table class="custom-table">
         <thead>
           <tr>
             <th>Feet</th>
             <th>Inch</th>
+            <th *ngIf="selectedProductDetails.type === 'NOS'">NOS</th>
             <th>R.Feet</th>
             <th>Sq/Ft</th>
             <th>Weight</th>
@@ -275,15 +276,18 @@
           <ng-container *ngFor="let quotationProduct of quotationProductFormArray.controls; let i=index" [formGroupName]="i">
             <ng-container formArrayName="quotationTable">
               <tr *ngFor="let row of quotationTableFormArray?.controls; let i = index" [formGroupName]="i">
-                <td><input formControlName="feet" type="number" class="form-input" /></td>
-                <td><input formControlName="inch" type="number" class="form-input" /></td>
-                <td><input formControlName="rFeet" type="number" class="form-input" /></td>
-                <td><input formControlName="sqFt" type="number" class="form-input" /></td>
-                <td><input formControlName="weight" type="number" class="form-input" /></td>
-                <td>
-                  <button type="button" (click)="deleteRow(i)" class="btn btn-delete"><i
-                      class="fa-solid fa-trash"></i></button>
-                </td>
+                <ng-container *ngIf="quotationProduct.get('selectedProduct')?.value === selectedProductDetails.name"> <!-- only display selected product table rows -->
+                  <td><input formControlName="feet" type="number" class="form-input" /></td>
+                  <td><input formControlName="inch" type="number" class="form-input" /></td>
+                  <td *ngIf="selectedProductDetails.type === 'NOS'"><input formControlName="nos" type="number" class="form-input" /></td> <!-- optionaly -->
+                  <td><input formControlName="rFeet" type="number" class="form-input" readonly /></td>
+                  <td><input formControlName="sqFt" type="number" class="form-input" readonly /></td>
+                  <td><input formControlName="weight" type="number" class="form-input" readonly /></td>
+                  <td>
+                    <button type="button" (click)="deleteRow(i)" class="btn btn-delete"><i
+                        class="fa-solid fa-trash"></i></button>
+                  </td>
+                </ng-container>
               </tr>
             </ng-container>
           </ng-container>
@@ -291,8 +295,8 @@
       </table>
 
       <div style="display: flex;justify-content: space-between; align-items: center;">
-        <button type="button" (click)="addRow()" class="btn btn-add"><i class="fa-solid fa-plus"></i> Add Row</button>
-        <button type="submit" class="btn btn-submit">save Table</button>
+        <button type="button" class="btn btn-add" (click)="addRow()"><i class="fa-solid fa-plus"></i> Add Row</button>
+        <button type="button" class="btn btn-danger" (click)="downloadPDF()">Download in PDF</button>
       </div>
     </form>
   </div>
